--- a/index.html
+++ b/index.html
@@ -251,12 +251,18 @@
     of financial theory.
   </p>
 
+   <p>
+   I’m also interested in mechanistic interpretability and AI alignment, 
+  particularly in understanding how modern machine learning models represent and transform information internally.
+  </p>
+
   <p>
-    I have served as a Teaching Assistant for multiple finance and
+    I have served as a Teaching Assistant for multiple machine learning and
     computational finance courses, where I helped students bridge theory
     and implementation across portfolio construction, factor models,
     and statistical learning.
   </p>
+
 
   <p>
     I was a winner of the IMC Prosperity Trading Competition, finishing
